@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.51 2005/01/22 08:58:05 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.52 2005/01/26 03:59:44 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  25 Jan 2005; Preston Cody <codeman@gentoo.org>
+  changed output of portmap start to display_on_tty8.
+  fixed bootloader for udev and multiple kernels
 
   22 Jan 2005; Preston Cody <codeman@gentoo.org>
   changed default value of CC._enable_ssh to True because this is smart.
